--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 title: My Awesome Site
 locale: en_US
 description: Philo
-logo: site-logo.png
+logo: site-logo.jpg
 search: true
 url: https://martinyingzheng.github.io
 
