--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Site wide configuration
 
-title: My Awesome Site
+title: Ying Zheng
 locale: en_US
-description: Philo
+description: Economics and Philosophy
 logo: site-logo.jpg
 search: true
 url: https://martinyingzheng.github.io
